<resources>
    <string name="app_name">Kariti</string>
    <string name="buttonvoltarTela">VOLTAR</string>
    <string name="nomeCompleto">Nome Completo*</string>
    <string name="email">E-mail</string>
    <string name="emailNoRequired">E-mail</string>
    <string name="InfEmail">Informe seu e-mail</string>
    <string name="sexo">Sexo</string>
    <string name="img_galeria">Imagens</string>
    <string name="Acerto">Acerto </string>
    <string name="nomeImagem">000_00_00_0.jpg</string>
    <string name="Nota">Nota </string>
    <string name="dataImagem">2024-04-20 19:50</string>
    <string name="Ver">Ver</string>
    <string name="Questao">Questão </string>
    <string name="Marcada">Marcada </string>
    <string name="Gabarito">Gabarito </string>
    <string name="ButtonRetornar">Retornar</string>
    <string name="RespostaEsperada">Status </string>
    <string name="NotaDetalhe">Peso </string>
    <string name="Detalhes">Detalhes</string>
    <string name="cpf">CPF</string>
    <string name="nomeEscola">Nome da Escola</string>
    <string name="escolaArquivada">Escolas arquivadas</string>
    <string name="maisEscola">Mais Escolas</string>
    <string name="acessoSenha">Digite sua senha</string>
    <string name="descricioniconwelcome">Icone Welcome</string>
    <string name="novaSenha">Nova senha*</string>
    <string name="informeNovaSenha">Informe a nova senha*</string>
    <string name="repetirSenha">Repita a senha</string>
    <string name="textViewsenha">Senha de Acesso*</string>
    <string name="textViewconfirmar">Confirmar Senha*</string>
    <string name="EditTextInfoEscola">Informe o nome da escola</string>
    <string name="buttonCadastrar">Cadastrar</string>
    <string name="cadEscola">Cadastrar Escola</string>
    <string name="criaConta">Criar conta</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="textViewKariti">Kariti</string>
    <string name="buttonConfig">Configurações</string>
    <string name="buttonValidar">Validar</string>
    <string name="textViewCancelar">Cancelar</string>
    <string name="textViewReenviar">Reenviar código</string>
    <string name="textViewOutroMetodo">Usar outro Método</string>
    <string name="textViewbemVindo">SEJA BEM VINDO AO</string>
    <string name="textViewkariti">KARITI</string>
    <string name="buttonCadastreSe">Cadastre-se</string>
    <string name="buttonLogin">Login</string>
    <string name="buttonEsqueciSenha">Esqueci Minha Senha</string>
    <string name="textViewLoginEntrar">Entre com seu Login*</string>
    <string name="textViewInformeSenha">Informe Sua Senha*</string>
    <string name="btnEntrar">Entrar</string>
    <string name="msg_erro">Dados Incorretos!</string>
    <string name="voidSchool">Nenhum Dado Cadastrado!</string>
    <string name="valorZero">0</string>
    <!--Escola-->
    <string name="buttonCadastroEscola">Cadastrar escola</string>
    <string name="buttonVisualizarEscolas">Visualizar Escolas</string>
    <string name="nomeSchool">Nome da Escola*</string>
    <string name="bairroSchool">Bairro</string>
    <string name="senhahint">********</string>
    <string name="btnAlterarSenha">Cadastrar</string>
    <string name="selecionarEsc">Selecionar Escola</string>
    <string name="descricNovaSenha">Texto Nova Senha</string>
    <string name="btnEscolaDesativada">Escolas desativadas</string>
    <string name="escolaTeste">Esola Teste</string>
    <!--    Aluno-->
    <string name="buscNameAluno">Pesquisar aluno</string>
    <string name="buscNameAlunoLupa">Lupa de pesquisa</string>
    <string name="textViewAluno"> Alunos</string>
    <string name="textViewTurma">Turma</string>
    <string name="time">00:00:00</string>
    <string name="textViewCalendar">Calendário</string>
    <string name="textViewProva">Prova</string>
    <string name="textViewEditProva">Mais Opções </string>
    <string name="buttonEditar">Editar </string>
    <string name="buttonProximo">Proximo >> </string>
    <string name="buttonApagar">Apagar </string>
    <string name="textInstrucao">Aqui você pode editar ou apagar uma prova!</string>
    <string name="buttonCadAluno">Cadastrar Aluno</string>
    <string name="buttonVisuAluno">Visualizar Aluno</string>
    <string name="EditTextIdAluno">ID do aluno</string>
    <string name="btnSalvaAluno">Salvar</string>
    <string name="menuEditarAlun">Editar Aluno</string>
    <string name="menuExclAlun">Excluir Aluno</string>
    <!--    Turma-->
    <string name="buttonCadTurma">Cadastrar Turma</string>
    <string name="buttonSalvTurma">Salvar Turma</string>
    <string name="buttonVisuTurma">Visualizar Turma</string>
    <string name="editTextNomeTurma">Nome da Turma*</string>
    <string name="textViewAlunos">Alunos</string>
    <string name="editTextBuscAluno">Buscar Alunos</string>
    <string name="btnIncluirAluno">Incluir Alunos</string>
    <string name="btnIncluir">Incluir</string>
    <string name="textViewAlunoAnonim">Incluir Alunos Anônimos</string>
    <string name="btnTranferirOutraTurma">Transf. de outra Turma</string>
    <!--    Prova-->
    <string name="buttonCadProva">Cadastrar Prova</string>
    <string name="buttonGerarCartao">Gerar Cartões</string>
    <string name="buttonVisuProva">Visualizar Correção</string>
    <string name="buttonVisualizar">Visualizar</string>
    <string name="buttonCorrigirProva">Corrigir Prova</string>
    <string name="editTextNomeProva">Digite o nome  da prova*</string>
    <string name="textViewDataProva">Data da Prova</string>
    <string name="textViewQuantQuestoes">Quant. de Questões</string>
    <string name="textViewQuantAltern">Quant. de Alternativas</string>
    <string name="buttonGerarProva">Gerar Prova</string>
    <string name="buttonMais">+</string>
    <string name="buttonMenos">-</string>
    <string name="buttonQtd">0</string>
    <string name="buttonData">Selecionar Data</string>
    <string name="txtViewProva">Prova:</string>
    <string name="txtViewTurma">Turma:</string>
    <string name="txtViewData">Data:</string>
    <string name="txtViewNotaT">Nota total da prova X pontos.</string>
    <string name="txtConfimProva">Prova cadastrada com Sucesso!</string>
    <string name="btnBaixCartao">Baixar Cartão</string>
    <string name="btnEnvCartao">Enviar Cartão</string>
    <string name="btnAbrirGaleria">Carregar da Galeria</string>
    <string name="btnAbrirCamera">SCANNEAR QRCODE</string>
    <string name="txtProva1">Prova 1</string>
    <string name="btnEnviarParaAluno">Enviar Para Aluno</string>
    <string name="btnEnviarParaProf">Enviar Para Professor</string>
    <string name="btnBaixarProva">Baixar Resultado</string>
    <string name="btnCompartilhar">Compartilhar</string>
    <string name="txtAcertos">Acertos</string>
    <!--    Descrição das Imagens-->
    <string name="dialogImage">Dialog Imagem</string>
    <string name="btnVoltar">Button Voltar</string>
    <string name="iconeVoltar">Botão de Voltar</string>
    <string name="btnHome">Button Home</string>
    <string name="btnMenuPontos">Button Menu</string>
    <string name="iconeMenuPontos">Icone de Menu</string>
    <string name="imgProfessor">Imagem Professor</string>
    <string name="imgBtnSeta">Icone Seta Prox</string>
    <string name="msgCodigo">Código de validação ENVIADO para</string>
    <string name="imgDelete">Botão de Deletar</string>
    <string name="txtViewNomeTurma">Nome da Turma</string>
    <string name="btnFlutuante">Adicionar Fotos</string>
    <string name="textAjuda">Ajuda</string>
    <string name="imgEscolaSelec">Imagem Chapeu formatura</string>
    <string name="imgEscolaCad">Imagem de Escola</string>
    <string name="menuExcluir">Excluir Escola</string>
    <string name="menuAtivar">Ativar Escola</string>
    <string name="config">Configuração</string>
    <string name="descritionScroll">Bloco do Gabarito</string>
    <string name="iconeTurma">Icone de Turma</string>
    <string name="iconeSearch">Icone de Pesquisa</string>
    <string name="iconeAluno">Icone de Aluno</string>
    <string name="iconeProva">Icone de Prova</string>
    <string name="iconeEmail">Icone do email</string>
    <string name="iconeUser">Icone do user</string>
    <string name="iconeAddMaisAlter">Mais Alternativas</string>
    <string name="iconeAddMaisAnonimos">Mais Anônimos</string>
    <string name="iconeAddMaisQuest">Mais Questões</string>
    <string name="iconeCorrigir">Icone de corrigir</string>
    <string name="iconeMenosQuast">Menos Questões</string>
    <string name="iconeMenosAlter">Menos Alternativas</string>
    <string name="iconeMenosAnonimos">Menos Anônimos</string>
    <string name="imagemUser">Imagem do user</string>
    <string name="aguardeCorrecao">Aguarde a correção</string>
    <string name="iconeSenhaOculta">Botão de senha oculta</string>
    <string name="texticondirecional">Seta direcional</string>
    <string name="iconeSenhaOculta2">Botão de senha oculta2</string>
    <string name="iconeLixeira">Icone de lixeira</string>
    <string name="iconeFlash">Icone de flash da camera</string>
    <string name="iconeCaptura">Icone de captura</string>
    <string name="iconeAround">Icone de rotacionar câmera</string>

    <string name="btnGaleriaFinalizar">Finalizar e Corrigir</string>

    <!--    Camera-->
    <string name="informacaoCamera">Agora tire a foto do Gabarito</string>
    <string name="CapturaCamera">Capturar</string>

    <string name="testeTotalAlunos">Total de Alunos: 14</string>
    <string name="txtAlunosAno">Total de Alunos: 14</string>
    <string name="txtExemplo">Texto de exemplo</string>

</resources>