<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="5dp"
    android:layout_marginStart="5dp">

    <ImageView
        android:id="@+id/imageViewGaleria"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/img_galeria"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />
    <!--100-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="0dp"
        android:gravity="center"
        android:layout_toEndOf="@+id/imageViewGaleria"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nomeDaFoto"
            style="@style/COLORTEXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/nomeImagem"
            android:layout_marginStart="2dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/dataDafoto"
            style="@style/COLORTEXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="2dp"
            android:textSize="16sp"
            android:text="@string/dataImagem" />
    </LinearLayout>

    <!--<ImageButton
        android:id="@+id/deleteImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="16dp"
        android:background="@color/tranparente"
        android:src="@mipmap/delete"
        android:visibility="gone" />-->
</RelativeLayout>